# sysmon

./: README.md  install.sh  pyproject.toml
src/sysmon/: __init__.py  __main__.py  monitor.py
src/sysmon/collectors/: __init__.py  disk.py
src/sysmon/display/: __init__.py  panels.py  processes.py
src/sysmon/utils/: alerts.py
