[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sysmon"
version = "1.0.0"
description = "A modern CLI tool for real-time Linux system performance monitoring"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["system", "monitor", "performance", "cli", "linux", "cpu", "memory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "docker>=7.0.0",
]

[project.scripts]
sysmon = "sysmon.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
